# batch-doc-vqa

./: .gitignore  BENCHMARKS.md  OPENROUTER_GENERAL_BATCH_NER_PLAN.md  README.md  batch_extract.py  calibration.ipynb  gemini-compat-api.py  gemini-sdk.ipynb  generate_benchmark_table.py  generate_pareto_plot.py  llama3.2-vision_digit_probs.csv  llamavision.py  mlx-batch.py  model_metadata.json  openai-compat-api.py  openrouter_api.py  openrouter_cli.py  openrouter_inference.py  openrouter_ui.py  outlines_quiz.py  pdf_to_imgs.py  pyproject.toml  qwen_server.ipynb  requirements.txt  run_manager.py  statistical-calibration.md  string_matching.py  stringmatching.ipynb  update_all_benchmarks.py  update_readme_section.py
.github/workflows/: benchmark-artifacts.yml
benchmarks/published/q11/: archive.json
docs/: DEFAULT_STUDENT_SYNTHETIC_SUITE.md  OPENROUTER_MODEL_NOTES.md  OPENROUTER_PARAM_PROBE_PLAN.md  Q11_NEW_MODEL_BENCHMARK_RUNBOOK.md  TA_BENCHMARK.md  TA_BENCHMARK_PLAN.md  TA_STUDENT_DATA_SAFETY.md  TA_TIER1_PROTOCOLS.md  pareto.html
docs/examples/prompts/: basic-entity-extraction.md  ta-tier1-page-extract.md  ta-tier1-single-pass.md
docs/examples/schemas/: basic-entity-extraction.schema.json  ta_benchmark_v1.schema.json  ta_error_taxonomy_v1.json  ta_rubric_v1.schema.json  ta_tier1_page_extract.schema.json  ta_tier1_single_pass.schema.json
docs/examples/synthetic/: default_student_entities.csv  default_student_suite_v1.yaml  default_student_suite_v1_entities.csv  default_student_task_config.yaml
src/batch_doc_vqa/: __init__.py  update_benchmarks.py
src/batch_doc_vqa/benchmarks/: __init__.py  cleanup_bad_runs.py  cohorts.py  interactive_pareto.py  pareto_plot.py  published_runs.py  readme_updater.py  summarize_model_runs.py  synthetic_suite.py  table_generator.py
src/batch_doc_vqa/core/: __init__.py  image_utils.py  progress_utils.py  prompts.py  run_manager.py  runtime_utils.py
src/batch_doc_vqa/datasets/: instructor_pilot.py  ta_annotation_ui.py
src/batch_doc_vqa/gemini/: __init__.py  api.py  cli.py  inference.py  main.py  ui.py
src/batch_doc_vqa/openrouter/: __init__.py  api.py  cli.py  defaults.py  extraction_adapter.py  inference.py  main.py  param_sweep.py  spec.py  ui.py
src/batch_doc_vqa/ta_benchmark/: __init__.py  agreement.py  compare_runs.py  constants.py  dataset_freeze.py  io_utils.py  metrics.py  proposals.py  report.py  schema.py  score_runs.py  split_subset.py  validate_labels.py
src/batch_doc_vqa/templates/: __init__.py  benchmarks.md
src/batch_doc_vqa/tools/: __init__.py  (+1 more)
tests/: cv_row_tables.py  inference_probs.csv  prob_calibration.py  test_benchmarks_template.py  test_cleanup_bad_runs.py  test_cohorts.py  test_dataset_scoping.py  test_git_dirty_relevance.py  test_instructor_pilot_export.py  test_interactive_pareto.py  test_openrouter_cli.py  test_openrouter_extraction_adapter.py  test_openrouter_generation_meta.py  test_openrouter_inference_generation_params.py  test_openrouter_missing_choices.py  test_openrouter_model_filter.py  test_openrouter_model_overrides.py  test_openrouter_param_sweep.py  test_openrouter_schema_validation.py  test_openrouter_spec.py  test_parallelizable_runtime.py  test_published_run_portability.py  test_published_runs.py  test_relaxed_name_matching.py  test_run_manager_reproducibility.py  test_summarize_model_runs.py  test_synthetic_benchmark_suite.py  test_synthetic_pdf_task_generator.py  test_ta_annotation_io.py  test_ta_compare_agreement.py  test_ta_metrics.py  test_ta_proposals.py  test_ta_schema.py  test_ta_smoke.py  test_ta_split_subset.py  test_table_generator_costs.py  test_update_benchmarks.py
tests/data/: test_ids.csv
tests/output/: top_k_acc.md
(+142 files in other folders)
